<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ForgetPasswordActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/forgetpassBackBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f4f5f5"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/PassRec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password_Recovery"
            android:textColor="@color/light_black"
            android:textAlignment="center"
            style="@style/text_MainHeading">
        </TextView>
    </com.google.android.material.appbar.MaterialToolbar>
    <TextView
            android:id="@+id/Textforgetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:text="@string/Forgot_Password"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="22dp">

        </TextView>
        <TextView
            android:id="@+id/textdetailfogetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@id/Textforgetpass"
            android:textAlignment="center"
           android:text="@string/Enter_your_email_and_will_send_you_instruction_on_how_to_reset_it.">
        </TextView>
    <EditText
        android:id="@+id/Editpasswordforget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textdetailfogetpass"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="10dp"
        android:background="@drawable/forgetpassroundbutton"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:editable="true"
        android:gravity="left"
        android:hint="@string/Email_address"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingTop="15dp"
        android:textAllCaps="false"
        android:textColor="#868D97"
        android:textSize="14dp">
    </EditText>
    <Button
        android:id="@+id/BtnSendlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Editpasswordforget"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/roundedgreen"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/Send_link"
        android:textAllCaps="false" />
</RelativeLayout>