<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_two"
    tools:context=".MainActivity">
   <com.google.android.material.appbar.MaterialToolbar
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       tools:ignore="MissingConstraints">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Welcome"
           style="@style/text_MainHeading">
       </TextView>
   </com.google.android.material.appbar.MaterialToolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">
        <ImageView
            android:id="@+id/ImageWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ImageView>
        <RelativeLayout
            android:id="@+id/RelativeSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f4f5f9"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/secondtextbold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Welcome"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:textColor="@color/light_black"
                android:layout_marginLeft="35dp"
                android:textSize="22dp">
            </TextView>
            <TextView
                android:id="@+id/textdetail"
                android:layout_marginLeft="35dp"
                android:textSize="13sp"
                android:layout_below="@id/secondtextbold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/To_the_worldls_no1_grocery_app_android_and_iOS._We_deliver_everything_on_time.">
            </TextView>
            <Button
                android:id="@+id/Btn_ConnetGooglemain"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/Connect_using_Google"
                android:background="@drawable/roundedbuttons"
                android:textAllCaps="false"
                android:padding="10dp"
                android:layout_below="@id/textdetail"
                android:drawableLeft="@drawable/ic_google"
                android:layout_marginRight="30dp" />
            <Button
                android:id="@+id/Btn_CreateAccountmain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Btn_ConnetGooglemain"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/roundedgreen"
                android:textAllCaps="false"
                android:padding="10dp"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_profile"
                android:text="@string/Create_an_account"
                android:onClick="createaccountmain" />
            <TextView
                android:id="@+id/textLogintooltip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Btn_CreateAccountmain"
                android:layout_marginTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/Already_have_an_account_Login"
                android:textAlignment="center">
            </TextView>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>