<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_three"
    tools:context=".SignupActivity">

    <!--<androidx.appcompat.widget.Toolbar  We can use this as well-->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/signUpBackBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/signup_toolbar_title"
            style="@style/text_MainHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Signup"
            android:textAlignment="center">
        </TextView>
    </com.google.android.material.appbar.MaterialToolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"></ImageView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white">
            <TextView
                android:id="@+id/secondtextbold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="15dp"
                android:text="@string/Create_an_account"
                android:textColor="@color/light_black"
                android:textSize="22dp"
                android:textStyle="bold"></TextView>
            <TextView
                android:id="@+id/textdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/secondtextbold"
                android:layout_marginLeft="35dp"
                android:text="Quickly create account.">
            </TextView>
            <EditText
                android:id="@+id/EditEmailsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textdetail"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/roundedbuttons"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="15dp"
                android:editable="true"
                android:gravity="left"
                android:hint="@string/Email_address"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingTop="15dp"
                android:textAllCaps="false"
                android:textColor="#868D97"
                android:textSize="14dp"></EditText>
            <EditText
                android:id="@+id/EditPhonesignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/EditEmailsignup"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/roundedbuttons"
                android:drawableLeft="@drawable/ic_baseline_call_24"
                android:drawablePadding="15dp"
                android:editable="true"
                android:gravity="left"
                android:hint="Phone"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingTop="15dp"
                android:textAllCaps="false"
                android:textColor="#868D97"
                android:textSize="14dp"></EditText>
            <EditText
                android:id="@+id/EditPasswordsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/EditPhonesignup"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/roundedbuttons"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="15dp"
                android:editable="true"
                android:gravity="left"
                android:hint="@string/Password"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingTop="15dp"
                android:textAllCaps="false"
                android:textColor="#868D97"
                android:textSize="14dp">
            </EditText>

            <Button

                android:id="@+id/BtnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/EditPasswordsignup"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/roundedgreen"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/Signup"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/signuptooltip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/BtnSignup"
                android:layout_marginTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/Already_have_an_account_Login"
                android:textAlignment="center">

            </TextView>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>